      class. Based on a suggestion from Paul Brannon in ruby-talk 79041.
    o Added color_histogram (IM 5.5.8, GM 1.1)
    o Added HSLColorspace, HWBColorspace constants (IM 5.5.7, GM 1.0.2)
    o Added CopyCyanCompositeOp, CopyMagentaCompositeOp,
      CopyYellowCompositeOp, CopyBlackCompositeOp constants (IM 5.5.7)
    o Added get_exif_by_entry, get_exif_by_tag to Image class
    o Added TintImage (IM 5.5.8)

RMagick 1.3.0
    o Added strip!, import_pixels, export_pixels, random_channel_threshold
      to the Image class. (Available only with ImageMagick 5.5.8, which
      is still in beta.)
    o Added black_threshold and white_threshold to the Image class.
    o Added format= attribute writer to the Image class
    o Added monochrome= attribute writer to the Image::Info class
    o Added annotate to the Image class.
    o Made the image argument to get_type_metrics optional. (Thanks to
      Hal Fulton for suggesting this change and the annotate change!)
    o Enhance the read, write, and ping methods in both the Image
      class and the ImageList class to accept an open File object as
      well as a filename argument.
    o Added change_geometry to the Image class
    o Changed configure to generate top-level Makefile with install
      and uninstall targets. (Thanks to Bob Friesenhahn for the
      suggestion and the the Makefile!)
    o Incorporated 1.2.2.1 patch to correct problems when building
      with Ruby 1.6.7.
    o Added "magick_location" attribute to the ImageMagickError
      class. (Available only with GraphicsMagick 1.1, not yet released.)
    o Tested with ImageMagick 5.5.8 beta
    o Tested with GraphicsMagick 1.0.2 and 1.1 snapshot
    o Tested with Ruby 1.8.0
    o Changed to MIT license

RMagick 1.2.2
    o Fixed many bugs in configuration script
    o Added support for GraphicsMagick 1.0 (with assistance from Bob Friesenhahn)
    o Changed default documentation directory (--doc-dir option default) to
      $prefix/share/RMagick