@@ -1,52 +1,53 @@
 #undef GRAPHICSMAGICK
-#undef HAVE_SNPRINTF
+#undef HAVE_ACQUIREMAGICKMEMORY
 #undef HAVE_ADAPTIVETHRESHOLDIMAGE
 #undef HAVE_APPENDIMAGETOLIST
+#undef HAVE_BLACKTHRESHOLDIMAGE
+#undef HAVE_COPYCYANCOMPOSITEOP
 #undef HAVE_DISPOSETYPE
-#undef HAVE_MAGICK_INT64_T
-#undef HAVE_MAGICK_UINT64_T
+#undef HAVE_EXCEPTIONINFO_MODULE
+#undef HAVE_EXPORTIMAGEPIXELS
 #undef HAVE_EXTENDEDSIGNEDINTEGRALTYPE
 #undef HAVE_EXTENDEDUNSIGNEDINTEGRALTYPE
-#undef HAVE_MAGICKSIGNEDTYPE
-#undef HAVE_MAGICKUNSIGNEDTYPE
-#undef HAVE_GETNEXTIMAGEINLIST
-#undef HAVE_IMAGEINFO_NUMBER_SCENES
-#undef HAVE_IMAGE_EXTRACT_INFO
-#undef HAVE_INTTYPES_H
-#undef HAVE_LEVELIMAGECHANNEL
-#undef HAVE_MEMORY_H
-#undef HAVE_NOCOMPLIANCE
-#undef HAVE_REMOVEFIRSTIMAGEFROMLIST
-#undef HAVE_SETLOGFORMAT
-#undef HAVE_STDINT_H
-#undef HAVE_STDLIB_H
-#undef HAVE_STRINGS_H
-#undef HAVE_STRING_H
-#undef HAVE_SYS_STAT_H
-#undef HAVE_SYS_TYPES_H
-#undef HAVE_THUMBNAILIMAGE
-#undef HAVE_UNISTD_H
-#undef HAVE_XIMPORTIMAGE
-#undef HAVE_IMPORTIMAGEPIXELS
-#undef HAVE_EXPORTIMAGEPIXELS
-#undef HAVE_THRESHOLDIMAGECHANNEL
-#undef HAVE_RANDOMCHANNELTHRESHOLDIMAGE
-#undef HAVE_STRIPIMAGE
-#undef HAVE_ACQUIREMAGICKMEMORY
-#undef HAVE_BLACKTHRESHOLDIMAGE
-#undef HAVE_WHITETHRESHOLDIMAGE
-#undef HAVE_GETMAGICKINFOARRAY
+#undef HAVE_FUZZYCOLORCOMPARE
+#undef HAVE_GETCOLORHISTOGRAM
 #undef HAVE_GETCOLORINFOARRAY
-#undef HAVE_EXCEPTIONINFO_MODULE
+#undef HAVE_GETIMAGEHISTOGRAM
 #undef HAVE_GETLOCALEEXCEPTIONMESSAGE
 #undef HAVE_GETMAGICKGEOMETRY
-#undef HAVE_PARSESIZEGEOMETRY
+#undef HAVE_GETMAGICKINFOARRAY
+#undef HAVE_GETNEXTIMAGEINLIST
 #undef HAVE_HSLCOLORSPACE
 #undef HAVE_HWBCOLORSPACE
-#undef HAVE_COPYCYANCOMPOSITEOP
+#undef HAVE_IMAGE_EXTRACT_INFO
+#undef HAVE_IMAGEINFO_NUMBER_SCENES
+#undef HAVE_IMPORTIMAGEPIXELS
+#undef HAVE_INTTYPES_H
+#undef HAVE_LEVELIMAGECHANNEL
+#undef HAVE_MAGICK_INT64_T
+#undef HAVE_MAGICK_UINT64_T
+#undef HAVE_MAGICKSIGNEDTYPE
+#undef HAVE_MAGICKUNSIGNEDTYPE
+#undef HAVE_MEMORY_H
+#undef HAVE_NOCOMPLIANCE
+#undef HAVE_PARSESIZEGEOMETRY
+#undef HAVE_RANDOMCHANNELTHRESHOLDIMAGE
+#undef HAVE_REMOVEFIRSTIMAGEFROMLIST
+#undef HAVE_SETLOGFORMAT
+#undef HAVE_SNPRINTF
+#undef HAVE_STDINT_H
+#undef HAVE_STDLIB_H
+#undef HAVE_STRING_H
+#undef HAVE_STRINGS_H
+#undef HAVE_STRIPIMAGE
+#undef HAVE_SYS_STAT_H
+#undef HAVE_SYS_TYPES_H
+#undef HAVE_THRESHOLDIMAGECHANNEL
+#undef HAVE_THUMBNAILIMAGE
 #undef HAVE_TINTIMAGE
-#undef HAVE_GETCOLORHISTOGRAM
-#undef HAVE_GETIMAGEHISTOGRAM
+#undef HAVE_UNISTD_H
+#undef HAVE_WHITETHRESHOLDIMAGE
+#undef HAVE_XIMPORTIMAGE
 #undef MAGICKNAME
 #undef PACKAGE_BUGREPORT
 #undef PACKAGE_NAME
